# vulpark

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  example.env  readme.md
src/: main.rs
src/database/: auth.rs  channel.rs  guild.rs  macros.rs  message.rs  mod.rs  user.rs
src/route/: channel.rs  gateway.rs  guild.rs  macros.rs  message.rs  mod.rs  user.rs
src/structures/: auth.rs  channel.rs  client.rs  error.rs  event.rs  guild.rs  message.rs  mod.rs  response.rs  restricted_string.rs  user.rs
